feat(*): modify the leaderboard to use volume sorting,the authenticator information increases the IP and location
