# docs/swagger.yaml
@@ -123,6 +123,9 @@ definitions:
       name:
         description: name
         type: string
+      snftAmount:
+        description: The total amount of coins in the chain
+        type: string
       symbol:
         description: symbol
         type: string
@@ -276,9 +279,6 @@ definitions:
       amount:
         description: Pledge amount
         type: string
-      balance_count:
-        description: Total transaction amount, unit wei
-        type: string
       block_number:
         description: The block number when created
         type: integer
@@ -304,6 +304,9 @@ definitions:
       timestamp:
         description: Open time
         type: integer
+      tx_amount:
+        description: Total transaction amount, unit wei
+        type: string
       tx_hash:
         description: The transaction created
         type: string
@@ -377,6 +380,66 @@ definitions:
         type: array
       transactionHash:
         description: create transaction
+        type: string
+    type: object
+  model.NFT:
+    properties:
+      address:
+        description: NFT address, grows automatically from 0x1
+        type: string
+      attributes:
+        description: Attributes
+        type: string
+      block_number:
+        description: The height of the created block
+        type: integer
+      category:
+        description: category
+        type: string
+      collection_id:
+        description: The id of the collection, the name of the collection + the creator
+          of the collection + the hash of the exchange where the collection is located
+        type: string
+      creator:
+        description: Creator address
+        type: string
+      desc:
+        description: description
+        type: string
+      exchanger_addr:
+        description: The address of the exchange, if there is none, it can be traded
+          on any exchange
+        type: string
+      last_price:
+        description: The last transaction price (null if the transaction is not completed),
+          the unit is wei
+        type: string
+      meta_url:
+        description: Real meta information URL
+        type: string
+      name:
+        description: name
+        type: string
+      owner:
+        description: owner
+        type: string
+      raw_meta_url:
+        description: Original meta information URL on the chain
+        type: string
+      royalty_ratio:
+        description: Royalty rate, in ten thousandths
+        type: integer
+      source_url:
+        description: Resource links, file links such as pictures or videos
+        type: string
+      timestamp:
+        description: Create timestamp
+        type: integer
+      tx_amount:
+        description: the total transaction volume of this NFT
+        type: string
+      tx_hash:
+        description: The transaction hash created
         type: string
     type: object
   model.NFTTx:
@@ -454,6 +517,9 @@ definitions:
       reward_number:
         description: The height of the last rewarded block, null if not rewarded
         type: integer
+      tx_amount:
+        description: the total transaction volume of this SNFT
+        type: string
     type: object
   model.Subscription:
     properties:
@@ -479,13 +545,10 @@ definitions:
         description: address
         type: string
       exchangerAmount:
-        description: exchanger amount
+        description: exchanger pledge amount
         type: string
       name:
         description: name
-        type: string
-      pledgeAmount:
-        description: pledge amount
         type: string
       rewardCoinCount:
         description: Number of times to get coin rewards, 0.1ERB once
@@ -494,7 +557,7 @@ definitions:
         description: Number of times to get SNFT rewards
         type: integer
       snftAmount:
-        description: snft amount
+        description: The total amount of coins in the chain
         type: string
       symbol:
         description: symbol
@@ -511,6 +574,9 @@ definitions:
       type:
         description: contract types, ERC20, ERC721, ERC1155
         type: integer
+      validatorAmount:
+        description: validator pledge amount
+        type: string
     type: object
   service.AccountsRes:
     properties:
@@ -617,9 +683,6 @@ definitions:
       amount:
         description: Pledge amount
         type: string
-      balance_count:
-        description: Total transaction amount, unit wei
-        type: string
       block_number:
         description: The block number when created
         type: integer
@@ -648,6 +711,9 @@ definitions:
       timestamp:
         description: Open time
         type: integer
+      tx_amount:
+        description: Total transaction amount, unit wei
+        type: string
       tx_hash:
         description: The transaction created
         type: string
@@ -809,6 +875,9 @@ definitions:
       timestamp:
         description: Create timestamp
         type: integer
+      tx_amount:
+        description: the total transaction volume of this NFT
+        type: string
       tx_hash:
         description: The transaction hash created
         type: string
@@ -893,6 +962,9 @@ definitions:
             timestamp:
               description: Create timestamp
               type: integer
+            tx_amount:
+              description: the total transaction volume of this NFT
+              type: string
             tx_hash:
               description: The transaction hash created
               type: string
@@ -907,50 +979,7 @@ definitions:
       exchangers:
         description: Exchanger list
         items:
-          properties:
-            address:
-              description: Exchange address
-              type: string
-            amount:
-              description: Pledge amount
-              type: string
-            balance_count:
-              description: Total transaction amount, unit wei
-              type: string
-            block_number:
-              description: The block number when created
-              type: integer
-            close_at:
-              description: if not null, the exchange is closed
-              type: integer
-            count:
-              description: The number of pledges, both PledgeAdd and PledgeSub are
-                added once
-              type: integer
-            creator:
-              description: Creator address
-              type: string
-            fee_ratio:
-              description: fee rate, unit 1/10,000
-              type: integer
-            name:
-              description: Exchange name
-              type: string
-            nft_count:
-              description: Total NFT count
-              type: integer
-            timestamp:
-              description: Open time
-              type: integer
-            tx_hash:
-              description: The transaction created
-              type: string
-            txCount:
-              type: integer
-            url:
-              description: Exchange URL
-              type: string
-          type: object
+          $ref: '#/definitions/model.Exchanger'
         type: array
       total:
         description: The total number of Exchanger
@@ -961,65 +990,7 @@ definitions:
       nfts:
         description: NFT list
         items:
-          properties:
-            address:
-              description: NFT address, grows automatically from 0x1
-              type: string
-            attributes:
-              description: Attributes
-              type: string
-            block_number:
-              description: The height of the created block
-              type: integer
-            category:
-              description: category
-              type: string
-            collection_id:
-              description: The id of the collection, the name of the collection +
-                the creator of the collection + the hash of the exchange where the
-                collection is located
-              type: string
-            creator:
-              description: Creator address
-              type: string
-            desc:
-              description: description
-              type: string
-            exchanger_addr:
-              description: The address of the exchange, if there is none, it can be
-                traded on any exchange
-              type: string
-            last_price:
-              description: The last transaction price (null if the transaction is
-                not completed), the unit is wei
-              type: string
-            meta_url:
-              description: Real meta information URL
-              type: string
-            name:
-              description: name
-              type: string
-            owner:
-              description: owner
-              type: string
-            raw_meta_url:
-              description: Original meta information URL on the chain
-              type: string
-            royalty_ratio:
-              description: Royalty rate, in ten thousandths
-              type: integer
-            source_url:
-              description: Resource links, file links such as pictures or videos
-              type: string
-            timestamp:
-              description: Create timestamp
-              type: integer
-            tx_hash:
-              description: The transaction hash created
-              type: string
-            txCount:
-              type: integer
-          type: object
+          $ref: '#/definitions/model.NFT'
         type: array
       total:
         description: The total number of NFTs
@@ -1043,8 +1014,6 @@ definitions:
               type: string
             category:
               description: category
-              type: string
-            creator:
               type: string
             desc:
               description: description
@@ -1077,8 +1046,9 @@ definitions:
             source_url:
               description: Resource links, file links such as pictures or videos
               type: string
-            txCount:
-              type: integer
+            tx_amount:
+              description: the total transaction volume of this SNFT
+              type: string
           type: object
         type: array
       total:
@@ -1177,6 +1147,9 @@ definitions:
         type: integer
       source_url:
         description: Resource links, file links such as pictures or videos
+        type: string
+      tx_amount:
+        description: the total transaction volume of this SNFT
         type: string
     type: object
   service.SNFTGroupsRes:
@@ -1310,6 +1283,9 @@ definitions:
             source_url:
               description: Resource links, file links such as pictures or videos
               type: string
+            tx_amount:
+              description: the total transaction volume of this SNFT
+              type: string
           type: object
         type: array
       total:
@@ -1329,6 +1305,9 @@ definitions:
     type: object
   service.Stats:
     properties:
+      avgBlockTime:
+        description: average block time, ms
+        type: integer
       chainId:
         description: chain id
         type: integer
@@ -1541,7 +1520,7 @@ definitions:
         description: staking account
         type: string
       amount:
-        description: Pledge amount
+        description: pledge amount
         type: string
       count:
         description: The number of pledges, both PledgeAdd and PledgeSub are added
@@ -1553,7 +1532,7 @@ definitions:
       location:
         $ref: '#/definitions/model.Location'
       reward:
-        description: Amount of total reward
+        description: amount of total reward
         type: string
       timestamp:
         description: The time at latest rewarding
@@ -2422,10 +2401,6 @@ paths:
       - application/json
       description: Exchanger ranking for a specified time range
       parameters:
-      - description: 'Limit, time range: 30d,7d,24h,all,'
-        in: query
-        name: limit
-        type: string
       - description: Page, default 1
         in: query
         name: page
@@ -2454,10 +2429,6 @@ paths:
       - application/json
       description: NFT ranking for a specified time range
       parameters:
-      - description: 'Limit, time range: 30d,7d,24h,all,'
-        in: query
-        name: limit
-        type: string
       - description: Page, default 1
         in: query
         name: page
@@ -2486,10 +2457,6 @@ paths:
       - application/json
       description: SNFT ranking for a specified time range
       parameters:
-      - description: 'Limit, time range: 30d,7d,24h,all,'
-        in: query
-        name: limit
-        type: string
       - description: Page, default 1
         in: query
         name: page
